--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^4.8.0"
+    "typescript": "^4.8.0",
+    "@types/react": "^18.0.0",
+    "@types/node": "^18.0.0"
   }
 }
